@@ -18,6 +18,15 @@ public class GameModel {
         gameSettings = new GameSettings( new IntegerRange( 1, 3, 1 ) /* level */, true /* sound */, true /* timer */ );
     }
 
+    public GameSettings getGameSettings() {
+        return gameSettings;
+    }
+
+    public void startGame() {
+        //TODO
+        System.out.println( "GameModel.startGame" );//XXX
+    }
+
     public void reset() {
         gameSettings.reset();
     }
